# simpleEchoServer

./: LICENSE  README.md  buf.gen.yaml  go.mod  pyproject.toml
echoapis/echo/v1/: echo.proto
goServer/: server.go
pyClient/: client.py
