[tool.poetry]
name = "simpleechoserver"
version = "0.1.0"
description = ""
authors = ["Netanel Katzburg <NetanelK@recolabs.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
betterproto = {extras = ["compiler"], version = "^1.2.5"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
